Set desktop large to 1600px. Fix hero backgrounds for better performance on mobile devices

--- a/src/sass/base/_mixins.scss
+++ b/src/sass/base/_mixins.scss
@@ -19,7 +19,7 @@
 }
 
 @mixin atDesktopLarge {
-    @media(min-width: 1400px) {
+    @media(min-width: 1600px) {
         @content;
     }
 }
